--- a/mathmavens-mm-live-v3-d4b574f9a02f/server/package.json
+++ b/mathmavens-mm-live-v3-d4b574f9a02f/server/package.json
@@ -1,29 +1,41 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
-   "build": "tsc",
-  "start": "node dist/index.js",
-  "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc || true",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "christoper",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sentry/node": "^10.12.0",
+    "@sentry/profiling-node": "^10.12.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/express": "^5.0.3",
     "@types/uuid": "^10.0.0",
     "axios": "^1.11.0",
+    "bullmq": "^5.61.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-winston": "^4.2.0",
+    "ioredis": "^5.7.0",
     "mediasoup": "^3.19.1",
     "mysql2": "^3.14.4",
+    "p-queue": "^9.0.0",
+    "redis": "^5.8.3",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
+    "ua-parser-js": "^2.0.5",
+    "winston": "^3.18.1",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/ua-parser-js": "^0.7.39",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
 }
